--- a/src/sass/features.scss
+++ b/src/sass/features.scss
@@ -18,10 +18,14 @@
         padding-left: 20px;
         padding-right: 20px;
     }
+    @media (max-width: $breakpoint-phablet) {
+        padding-top: 160px;
+    }
 }
 
 .home-main-features {
     padding: 140px 0;
+    background: transparent url(../images/features/bg-phones-carousel.png) 50% 50% no-repeat;
     h2 {
         font-size: 45px;
         text-align: center;
@@ -29,7 +33,11 @@
 }
 
 .main-features__container {
-    background-color: $color-feature-dark;
+    background: $color-feature-dark url(../images/features/cap-features.png) 0 100% no-repeat;
+    background-size: 100%;
+    padding-top: 50px;
+    position: relative;
+    top: 50px;
     .home-main-features__inner {
         max-width: 1056px;
         margin: 0 auto;
@@ -48,6 +56,8 @@
     box-sizing: border-box;
     padding: 20px;
     min-height: 240px;
+    position: relative;
+    top: -50px;
     h3 {
         font-size: 26px;
         font-weight: bold;
@@ -57,6 +67,11 @@
         font-size: 15px;
         line-height: 1.4;
         margin-bottom: 10px;
+    }
+    @media (max-width: $breakpoint-phablet) {
+        float: none;
+        width: 100%;
+        min-height: auto;
     }
 }
 
@@ -77,6 +92,10 @@
     position: relative;
     padding: 0 30px;
     margin-bottom: 80px;
+    @media (max-width: $breakpoint-phablet) {
+        float: none;
+        width: 100%;
+    }
 }
 
 .feature-item__header {
@@ -134,4 +153,72 @@
         font-size: 30px;
         line-height: 1.2;
     }
+}
+
+.phone-carousel {
+    position: relative;
+    margin: 60px auto;
+    max-width: 700px;
+}
+
+.phone-1 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    img {
+        max-width: 218px;
+    }
+}
+
+.phone-5 {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
+    img {
+        max-width: 218px;
+    }
+}
+
+.phone-4 {
+    position: absolute;
+    bottom: 0;
+    left: 15%;
+    z-index: 5;
+    img {
+        max-width: 246px;
+    }
+}
+
+.phone-2 {
+    position: absolute;
+    bottom: 0;
+    right: 15%;
+    z-index: 5;
+    img {
+        max-width: 246px;
+    }
+}
+
+.phone-3 {
+    position: relative;
+    text-align: center;
+    z-index: 10;
+    img {
+        max-width: 267px;
+    }
+    &.phone-bring-to-front {
+        z-index: 100;
+        transform: scale(1.05);
+    }
+}
+
+.phone-item {
+    transition: all 0.5s;
+}
+
+.phone-bring-to-front {
+    z-index: 100;
+    transform: scale(1.1);
 }
