--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -37,6 +37,11 @@ body {
         // min-height: 900px;
         padding: 120px 60px 50px 60px;
     }
+    @media (max-width: $breakpoint-phablet) {
+        // min-height: 900px;
+        padding: 120px 20px 50px;
+    }
+
 }
 
 .home-header__cta {
@@ -161,6 +166,15 @@ section {
         &#counterSeconds {
             &:after {
                 content: '';
+            }
+        }
+    }
+    @media (max-width: $breakpoint-phablet) {
+        font-size: 28px;
+        span {
+            padding: 6px 10px;
+            &:after {
+                right: -14px;
             }
         }
     }
