--- a/src/sass/features.scss
+++ b/src/sass/features.scss
@@ -33,7 +33,7 @@
 }
 
 .main-features__container {
-    background: $color-feature-dark url(../images/features/cap-features.png) 0 100% no-repeat;
+    background: $color-feature-dark url(../images/features/cap-features.png) center bottom no-repeat;
     background-size: 100%;
     padding-top: 50px;
     position: relative;
