--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -345,3 +345,14 @@ section {
         }
     }
 }
+
+.download-cta {
+    padding: 60px 20px;
+    text-align: center;
+    box-sizing: border-box;
+    h2 {
+        text-align: center;
+        font-size: 45px;
+        padding-bottom: 60px;
+    }
+}
