--- a/src/sass/settings.scss
+++ b/src/sass/settings.scss
@@ -14,6 +14,7 @@ $color-button-background: #4B49FF;
 $color-countdown-accent: #c1e1b8;
 $color-alternate-font: #ffffff;
 $color-main-font: #648350;
+$color-alternate-header-font: #000000;
 $color-header-font: #0a2c1a;
 $color-footer-font: #ffffff;
 $color-sidebar-font: #000000;
@@ -25,7 +26,7 @@ $color-form-background: #F2F2F4;
 $color-button-light: #D97BFF;
 $color-button-dark: #734CFF;
 $color-cap-meter: #7ED321;
-$color-cap-bg: #E8F7D8;
+$color-cap-bg: #ffffff;
 $color-roadmap: #4B49FF;
 $color-coupon-font: red;
 $color-feature-dark: #2f482a;
