--- a/src/sass/cap.scss
+++ b/src/sass/cap.scss
@@ -3,29 +3,30 @@
 
 .market-cap {
     box-sizing: border-box;
-    padding: 0 160px 50px 160px;
+    padding: 40px 40px 50px 40px;
+    max-width: 800px;
+    margin: 0 auto;
     @media (max-width: $breakpoint-tablet) {
-        padding: 0 60px 50px 60px;
+        padding: 0 20px 50px 20px;
+    }
+    h2 {
+        text-align: center;
+        font-size: 45px;
+        padding-bottom: 20px;
     }
 }
 
 .current-stage__label {
     font-size: 18px;
-    text-transform: uppercase;
-    margin-bottom: 16px;
-    padding-left: 10px;
+    text-align: center;
+    color: $color-roadmap;
 }
 
 .current-stage {
     position: relative;
-    border-radius: 26px;
-    box-shadow: 1px 2px 20px -1px rgba(108,73,255,0.4);
     box-sizing: border-box;
-    padding: 40px 100px;
+    padding: 40px 10px;
     text-align: center;
-    text-transform: uppercase;
-    z-index: 2;
-    background-color: white;
 }
 
 .current-stage__shadow {
@@ -41,7 +42,8 @@
 }
 
 .current-stage__header {
-    font-size: 24px;
+    font-size: 26px;
+    color: $color-alternate-header-font;
 }
 
 .current-stage__subheader {
@@ -50,7 +52,7 @@
     span {
         padding: 0 10px;
     }
-    @media (max-width: $breakpoint-tablet) {
+    @media (max-width: $breakpoint-phablet) {
         span, img {
             display: block;
         }
@@ -62,40 +64,38 @@
 
 .current-stage__meter {
     width: 100%;
-    height: 8px;
+    height: 14px;
     border-radius: 9px;
     background-color: $color-cap-bg;
+    box-shadow: 1px 2px 20px -1px rgba(0, 0, 0, 0.2);
+    margin-top: 40px;
+    
 }
 
 .current-stage__widget {
-    height: 8px;
-    width: 50%;
+    height: 14px;
+    width: 25%;
     border-radius: 9px;
-    background-color: $color-cap-meter;
+    background-color: $color-roadmap;
 }
 
 .current-stage__bullet {
-    margin-top: 26px;
+    margin-top: 16px;
     text-align: left;
+    &:after {
+        content: '';
+        clear: both;
+        display: table;
+    }
     li {
+        float: left;
+        width: 50%;
         position: relative;
         font-size: 18px;
-        line-height: 2.2;
-        padding-left: 20px;
+        text-align: right;
         &.-active {
-            &:before {
-                background-color: $color-cap-meter;
-            }  
-        }
-        &:before {
-            content: ' ';
-            position: absolute;
-            top: 14px;
-            left: 0;
-            border-radius: 50%;
-            width: 10px;
-            height: 10px;
-            background-color: $color-cap-bg;
+            color: $color-roadmap;
+            text-align: left;
         }
     }
 }
