#time 2h 0m updating roadmap section and some more responsive tweaks

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1149,12 +1149,21 @@ section {
 /* News styles
 */
 .true-news {
-  padding: 0 160px 40px;
+  background: transparent url(../images/bgs/bg-in-the-news.png) 50% 0 no-repeat;
   box-sizing: border-box;
+  padding: 80px 0;
 }
 .true-news h2 {
+  text-align: center;
   font-size: 45px;
-  text-transform: uppercase;
+  color: #000000;
+}
+
+.true-news__inner {
+  margin: 0 auto;
+  box-sizing: border-box;
+  max-width: 1200px;
+  padding: 0 100px;
 }
 
 .news-carousel__container {
@@ -1172,7 +1181,6 @@ section {
   width: 33.3%;
   box-sizing: border-box;
   padding: 0 14px;
-  background-color: white;
   margin: 10px 0 30px;
 }
 
@@ -1183,6 +1191,7 @@ section {
   border-radius: 12px;
   text-align: center;
   padding: 20px 10px;
+  background-color: white;
 }
 .news-carousel__item--inner img {
   max-width: 240px;
@@ -1520,14 +1529,16 @@ section {
 */
 .roadmap {
   padding: 60px 0;
+  background: transparent url(../images/roadmap/bg-roadmap.png) 50% 0% no-repeat;
+  color: #07160e;
 }
 
 .roadmap-header {
-  padding: 40px 300px 50px 160px;
+  padding: 40px 20px 50px;
   line-height: 1.2;
+  text-align: center;
 }
 .roadmap-header h2 {
-  text-transform: uppercase;
   font-size: 45px;
 }
 @media (max-width: 1240px) {
@@ -1541,9 +1552,15 @@ section {
   }
 }
 
+.roadmap-scroller {
+  width: 100%;
+  overflow-x: auto;
+}
+
 .roadmap-map {
   position: relative;
   height: 230px;
+  min-width: 1100px;
 }
 .roadmap-map:after {
   content: ' ';
@@ -1571,7 +1588,6 @@ section {
 .roadmap-map__description {
   text-align: center;
   font-size: 16px;
-  text-transform: uppercase;
   padding-top: 40px;
   line-height: 1.2;
 }
@@ -1586,36 +1602,16 @@ section {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 21px;
-  height: 21px;
+  width: 44px;
+  height: 44px;
   border-radius: 50%;
-  border: 4px solid white;
-  background-color: #4B49FF;
+  background-color: #ffffff;
   box-shadow: 2px 3px 25px -3px rgba(108, 73, 255, 0.6);
+  text-align: center;
 }
-.roadmap-map__bullet.-bullet2 {
-  width: 26px;
-  height: 26px;
-}
-.roadmap-map__bullet.-bullet3 {
-  width: 30px;
-  height: 30px;
-}
-.roadmap-map__bullet.-bullet4 {
-  width: 36px;
-  height: 36px;
-}
-.roadmap-map__bullet.-bullet5 {
-  width: 46px;
-  height: 46px;
-}
-.roadmap-map__bullet.-bullet6 {
-  width: 56px;
-  height: 56px;
-}
-.roadmap-map__bullet.-bullet7 {
-  width: 84px;
-  height: 84px;
+.roadmap-map__bullet img {
+  position: relative;
+  top: 10px;
 }
 
 .roadmap-map__line {
@@ -1624,7 +1620,7 @@ section {
   left: 0;
   transform: translateY(-50%);
   width: 100%;
-  border-top: 1px solid #4B49FF;
+  border-top: 1px solid #ffffff;
 }
 
 .roadmap-graphs__container {
@@ -1632,8 +1628,9 @@ section {
 }
 
 .roadmap-graphs {
-  width: 60%;
+  width: 100%;
   margin: 0 auto;
+  max-width: 860px;
 }
 .roadmap-graphs:after {
   content: ' ';
@@ -1642,7 +1639,7 @@ section {
 }
 @media (max-width: 770px) {
   .roadmap-graphs {
-    width: 82%;
+    width: 100%;
   }
 }
 
@@ -1651,12 +1648,47 @@ section {
   float: left;
   box-sizing: border-box;
   padding: 20px;
+  box-sizing: border-box;
 }
 .roadmap-graphs__col h3 {
   text-align: center;
-  font-size: 24px;
-  text-transform: uppercase;
+  font-size: 32px;
   padding-bottom: 50px;
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+@media (max-width: 770px) {
+  .roadmap-graphs__col h3 {
+    position: relative;
+    top: auto;
+    padding-bottom: 24px;
+    font-size: 26px;
+  }
+}
+@media (max-width: 650px) {
+  .roadmap-graphs__col h3 {
+    float: none;
+    width: 100%;
+    position: absolute;
+    top: 28%;
+  }
+}
+@media (max-width: 650px) {
+  .roadmap-graphs__col {
+    float: none;
+    width: 100%;
+  }
+}
+
+.roadmap-graphs__inner {
+  position: relative;
+  text-align: center;
+  border-radius: 8px;
+  background-color: #ffffff;
+  box-shadow: 2px 3px 25px -3px rgba(0, 0, 0, 0.2);
+  padding: 40px;
 }
 
 .roadmap-graphs__svg {
@@ -1665,46 +1697,49 @@ section {
 }
 
 .roadmap-graphs__ul {
-  margin-top: 100px;
+  margin-top: 25px;
+  text-align: left;
 }
 .roadmap-graphs__ul li {
-  line-height: 2.8;
-}
-
-.roadmap-graphs__ul--right li {
   position: relative;
-  padding-left: 40px;
+  line-height: 2;
+  padding-left: 28px;
+  padding-right: 35px;
 }
-.roadmap-graphs__ul--right li:before {
+.roadmap-graphs__ul li span {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.roadmap-graphs__ul li:before {
   content: ' ';
   position: absolute;
   left: 0;
-  top: 10px;
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
+  top: 9px;
+  width: 14px;
+  height: 14px;
 }
 
 .roadmap-graphs__item.-red:before {
-  border: 3px solid #FF496F;
+  background-color: #371e80;
 }
 .roadmap-graphs__item.-blue:before {
-  border: 3px solid #4B49FF;
+  background-color: #6e69ff;
 }
 .roadmap-graphs__item.-lightblue:before {
-  border: 3px solid #3EAEFF;
+  background-color: #7d52da;
 }
 .roadmap-graphs__item.-lightgreen:before {
-  border: 3px solid #7ED321;
+  background-color: #51ceba;
 }
 .roadmap-graphs__item.-darkgreen:before {
-  border: 3px solid #26CE93;
+  background-color: #68b1ff;
 }
 .roadmap-graphs__item.-yellow:before {
-  border: 3px solid #F8E71C;
+  background-color: #ee9252;
 }
 .roadmap-graphs__item.-grey:before {
-  border: 3px solid #9B9B9B;
+  background-color: #9B9B9B;
 }
 
 .roadmap-graphs__ul--left {
