--- a/src/sass/news.scss
+++ b/src/sass/news.scss
@@ -2,12 +2,21 @@
 */
 
 .true-news {
-    padding: 0 160px 40px;
+    background: transparent url(../images/bgs/bg-in-the-news.png) 50% 0 no-repeat;  
     box-sizing: border-box;
+    padding: 80px 0;
     h2 {
+        text-align: center;
         font-size: 45px;
-        text-transform: uppercase;
+        color: $color-alternate-header-font;
     }
+}
+
+.true-news__inner {
+    margin: 0 auto;
+    box-sizing: border-box;
+    max-width: 1200px;
+    padding: 0 100px;
 }
 
 .news-carousel__container {
@@ -27,7 +36,6 @@
     width: 33.3%;
     box-sizing: border-box;
     padding: 0 14px;
-    background-color: white;
     margin: 10px 0 30px;
 }
 
@@ -38,6 +46,7 @@
     border-radius: 12px;
     text-align: center;
     padding: 20px 10px;
+    background-color: white;
     img {
         max-width: 240px;
         width: 100%;
