--- a/src/sass/settings.scss
+++ b/src/sass/settings.scss
@@ -28,5 +28,6 @@ $color-button-dark: #734CFF;
 $color-cap-meter: #7ED321;
 $color-cap-bg: #ffffff;
 $color-roadmap: #4B49FF;
+$color-roadmap-font: #07160e;
 $color-coupon-font: red;
 $color-feature-dark: #2f482a;
