#time 2h 0m adding team section

--- a/src/sass/settings.scss
+++ b/src/sass/settings.scss
@@ -31,3 +31,4 @@ $color-roadmap: #4B49FF;
 $color-roadmap-font: #07160e;
 $color-coupon-font: red;
 $color-feature-dark: #2f482a;
+$color-team-accent: #c7c7c7;
