--- a/src/sass/news.scss
+++ b/src/sass/news.scss
@@ -17,6 +17,9 @@
     box-sizing: border-box;
     max-width: 1200px;
     padding: 0 100px;
+    @media (max-width: $breakpoint-tablet) {
+        padding: 0 50px;
+    }
 }
 
 .news-carousel__container {
@@ -80,9 +83,15 @@
     background-color: white;
     &.-previous {
         left: -80px;
+        @media (max-width: $breakpoint-tablet) {
+            left: -37px;
+        }
     }
     &.-next {
         right: -80px;
+        @media (max-width: $breakpoint-tablet) {
+            right: -37px;
+        }
     }
     &:hover {
         text-decoration: none;
@@ -92,6 +101,10 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%,-50%);
+    }
+    @media (max-width: $breakpoint-tablet) {
+        width: 40px;
+        height: 40px;
     }
 }
 
