--- a/src/sass/team.scss
+++ b/src/sass/team.scss
@@ -4,10 +4,12 @@
 .true-team {
     padding: 120px 60px 200px 60px;
     box-sizing: border-box;
+    margin: 0 auto;
     h2 {
         padding: 0 160px;
         font-size: 45px;
-        text-transform: uppercase;
+        text-align: center;
+        color: $color-alternate-header-font;
     }
     @media (max-width: $breakpoint-tablet) {
         padding: 120px 5px 200px 14px;
@@ -16,14 +18,17 @@
 
 .team-protraits {
     position: relative;
-    left: -60px;
     padding: 80px 40px;
     max-width: 1200px;
+    box-sizing: border-box;
     margin: 0 auto;
     &:after {
         content: ' ';
         display: table;
         clear: both;
+    }
+    @media (max-width: 900px) {
+        padding: 80px 0px;
     }
 }
 
@@ -32,27 +37,37 @@
     width: 25%;
     padding: 0 30px;
     box-sizing: border-box;
-    transform: rotate(-45deg) translate(40px,40px);
     &:first-child {
         // transform: rotate(-45deg) translate(40px,0px);
     }
 }
 
 .team-portraits__item {
-    position: relative;
-    margin: 0 auto 40px;
-    width: 73%;
-    border-radius: 25%;
+    float: left;
+    width: 20%;
     overflow: hidden;
-    box-shadow: 1px 2px 20px -1px rgba(108,73,255,0.4);
-    margin-left: 30%;
-    &:last-child {
-        margin-right: 20%;
+    //box-shadow: 1px 2px 20px -1px rgba(108,73,255,0.4);
+    //margin-left: 30%;
+    @media (max-width: 1100px) {
+        width: 25%;
     }
-    &:before{
-        content: ' ';
-        display: block;
-        padding-top: 100%;
+    @media (max-width: 900px) {
+        width: 33.3%;
+    }
+    @media (max-width: 570px) {
+        width: 50%;
+    }
+}
+
+.team-portraits__item--inner {
+    transition: all 0.25s;
+    position: relative;
+    border-radius: 8px;
+    border: 1px solid $color-team-accent;
+    min-height: 280px;
+    margin: 10px;
+    &:hover {
+        box-shadow: 1px 2px 20px -1px rgba(0,0,0,0.2);
     }
 }
 
@@ -69,35 +84,41 @@
     &:hover {
         opacity: 0.9;
         .team-portraits__item--bio {
-            transform: translateY(-50%) rotate(45deg);
+            // transform: translateY(-50%) rotate(45deg);
         }
     }
 }
 
 .team-portraits__item--bio {
-    position: absolute;
-    transition: all 0.25s;
-    top: 50%;
-    transform: translateY(50px) rotate(45deg);
-    text-align: center;
-    width: 100%;
+    // transform: translateY(50px) rotate(45deg);
+    text-align: left;
+    padding: 4px 10px;
     font-size: 12px;
     color: white;
-    line-height: 1.6;
+    line-height: 1.2;
+    .-name {
+        font-size: 17px;
+        color: $color-roadmap-font;
+    }
+    .-position {
+        font-size: 13px;
+        color: $color-roadmap;
+    }
+    .-contact-icons {
+        a {
+            text-decoration: none;
+        }
+    }
 }
 
 .team-portraits__item--image {
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     width: 100%;
-    height: 120%;
-    transform: rotate(45deg);
+    height: 217px;
+    border-radius: 8px 8px 0 0;
     &.-bret {
-        left: -8px;
-        top: -5px;
         background: transparent url(../images/portraits/bret.jpg) 50% 50% no-repeat;
-        background-size: 100%;
+        background-size: cover;
     }
     &.-dmitri {
         left: 2px;
@@ -140,6 +161,14 @@
         top: -5px;
         background: transparent url(../images/portraits/kori.jpg) 50% 50% no-repeat;
         background-size: 120%;
+    }
+}
+
+.team-portraits__row {
+    &:after {
+        content: '';
+        clear: both;
+        display: table;
     }
 }
 
